--- a/1.Numpy Lib/Numpy.ipynb
+++ b/1.Numpy Lib/Numpy.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -381,6 +381,83 @@
     "a = np.zeros_like(z)\n",
     "for i in range(np.shape(z)[0]):\n",
     "   a[i] += np.exp(z[i]) / sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  1,  2,  3,  4,  5],\n",
+       "       [ 1,  2,  3,  4,  5,  6],\n",
+       "       [ 2,  3,  4,  5,  6,  7],\n",
+       "       [ 3,  4,  5,  6,  7,  8],\n",
+       "       [ 4,  5,  6,  7,  8,  9],\n",
+       "       [ 5,  6,  7,  8,  9, 10]])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = np.array([(0,1,2,3,4,5), (1,2,3,4,5,6),(2,3,4,5,6,7),(3,4,5,6,7,8),(4,5,6,7,8,9),(5,6,7,8,9,10)])\n",
+    "A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  1,  2],\n",
+       "       [ 2,  3,  4],\n",
+       "       [ 4,  5,  6],\n",
+       "       [ 6,  7,  8],\n",
+       "       [ 8,  9, 10],\n",
+       "       [10, 11, 12]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "B = np.array([(0,1,2), (2,3,4),(4,5,6),(6,7,8),(8,9,10),(10,11,12)])\n",
+    "B\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[110, 125, 140],\n",
+       "       [140, 161, 182],\n",
+       "       [170, 197, 224],\n",
+       "       [200, 233, 266],\n",
+       "       [230, 269, 308],\n",
+       "       [260, 305, 350]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A.dot(B)"
    ]
   },
   {
